Updated image, fixed navbar spacing

--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -81,6 +81,8 @@ body {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  right: 10px;
+  top: 70px;
 }
 
 .dropdown-content a {
@@ -202,15 +204,15 @@ body {
   height: auto;
 }
 
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 
 /* Extra Extra large devices (large laptops and desktops, 1200px and below) */
 @media only screen and (max-width: 1600px) {
   #main-content {
     margin: 100px 275px;
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
   }
 }
 
@@ -219,20 +221,12 @@ body {
   #main-content {
     margin: 100px 175px;
   }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
 }
 
 /* Large devices (laptops/desktops, 1000px and below) */
 @media only screen and (max-width: 1000px) {
   #main-content {
     margin: 100px 75px;
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
   }
 }
 
@@ -251,7 +245,27 @@ body {
   }
 
   .dropdown:hover .dropdown-content {
+    display: none;
+  }
+
+  .dropdown .dropbtn {
+    display: none;
+  }
+
+  .dropdown a.dropdown-icon {
+    float: right;
     display: block;
+    color: antiquewhite;
+    font-size: 30px;
+    text-decoration: none;
+  }
+  
+  .dropdown.responsive .dropdown-content {
+    position: absolute;
+    display: block;
+    top: 70px;
+    right: 10px;
+    text-align: left;
   }
 }
 
@@ -280,22 +294,12 @@ body {
     font-size: 30px;
     text-decoration: none;
   }
-
-  .dropdown.responsive {position: relative;}
-
-  .dropdown.responsive a.dropdown-icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  /* .dropdown.responsive {float: none;} */
   
   .dropdown.responsive .dropdown-content {
-    position: relative;
+    position: absolute;
     display: block;
-    width: 100%;
-    top: 40px;
+    top: 70px;
+    right: 10px;
     text-align: left;
   }
 }
